# individual

./: .gitignore  pyproject.toml  requirements.txt
src/tr/analysis/: analysis_funcs.py  patching_funcs.py  path_patch_pos.py
src/tr/ioi_types/: data_prep.py  min_ioi.py  prep_webtext.py  syn_ioi.py
src/tr/model_setup/: model_settings.py
src/tr/result_files/: attention_pattern.py  graph_funcs.py  head_count.py  manual_logit_check.py  mlp_width_pp.py  patch_and_stats.py  search_S2NM.py  search_TS2NM.py  seed_clusters.py  statistical_tests.py  template_count_pp.py
src/tr/training/: train_funcs.py  train_model.py
